--- a/changelog.txt
+++ b/changelog.txt
@@ -1,15 +1,15 @@
-Patch v0.1.0:
--Added support for way more builds
--Selected skins now save
--Camera now saves photos to SaveData/Photos
--Added Film, KO Icons, Hair Dye, and more potions
--Consumables now work in late 2018
--Added support for outfits
--Alot more avatar items
--Improved support for Custom Rooms
--Many more improvements
-
-First public release of RebornRec, Report bugs and give suggestions in the Discord server.
+RebornRec 0.4.1 - the "AWESOME" update
+Improved support for skins for builds before late 2018 (skins actually now work in those builds)
+The server will now automatically re-detect the build version if it ever gets restarted while playing a build (in case it crashes or something similar)
+Quest chests in 2018 will now give tennis skirts just like 2017 (for parity (and more skirts))
+Added some community suggested words and some of my own aswell to charades (original ones still exist btw)
+Added a missing api required for july 2017 builds to work (curse of the campus witch is now possible)
+Updated the websocket so that the recnode build works (???)
+Added a water bottle as the weekly in 2018 (they put something in the water)
+Personal bubble should now be off by default in all builds instead of just 2018 (if this is problematic please tell me)
+Optimized the server a bit (server should be slightly faster now :D)
+Switching builds should be more stable (no more "not actually switching versions")
+Fixed saturday's third daily objective being broken
 
 Supports every build from 2016-2018, All builds currently available are in the #builds channel inside the Discord server.
 
